# serialport

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: cell_index.h  line.h  pointx.h  typedef.h  vec.h
res/: serialport.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  map_thread.cpp  map_thread.h  map_view.cpp  map_view.h  sensor_data.h  serialportthread.cpp  serialportthread.h  serialportwidget.cpp  serialportwidget.h  serialportwidget.ui
src/dataprocessor/: CMakeLists.txt  cl_endian.h  crc.cpp  crc.h  databuffer.cpp  databuffer.h  dataprocessor.cpp  dataprocessor.h  endianess.cpp  packet.cpp  packet.h
src/mapping/: boustrophedon.cpp  boustrophedon.h  cell_index.cpp  cell_index.h  cost_values.h  costmap_2d.cpp  costmap_2d.h  costmap_tools.cpp  costmap_tools.h  data.h  footprint.cpp  footprint.h  region.cpp  region.h
src/math/: line.cpp
src/navigation/: astar.cpp  astar.h  expander.h  frontier_search.cpp  frontier_search.h  global_planner.cpp  global_planner.h  gradient_path.cpp  gradient_path.h  grid_path_ros.cpp  grid_path_ros.h  inflation.cpp  inflation.h  navigation.cpp  potential_calculator.h  quadratic_calculator.cpp  quadratic_calculator.h  traceback.h
