cmake_minimum_required(VERSION 3.5)
project(serialport)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(RESOURCES_PATH ${CMAKE_CURRENT_LIST_DIR}/res)
message(${RESOURCES_PATH})

include_directories(include)
add_subdirectory(src)
#file(GLOB resources "${CMAKE_SOURCE_DIR}/resource/*")
#foreach(res ${resources})
#    file(COPY ${res} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resource)
#endforeach()
